Add support for file upload

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -27,3 +27,7 @@ liquibase.enabled=true
 logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+# limit upload file size
+spring.http.multipart.max-file-size=512KB
+spring.http.multipart.max-request-size=512KB
